Lots of changes to split into activities. Some DB cursor closure issues to address

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" android:orientation="vertical" android:weightSum="1">
-    <TextView android:layout_height="wrap_content" android:text="@string/applicationTitle" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/applicationTitle"></TextView>
-    <Button android:text="@string/buttonInitOAuth" android:id="@+id/buttonInitOAuth" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-    <EditText android:layout_height="wrap_content" android:id="@+id/editText1" android:layout_width="fill_parent">
-        <requestFocus></requestFocus>
-    </EditText>
-    <EditText android:layout_height="wrap_content" android:id="@+id/editText2" android:layout_width="fill_parent"></EditText>
-    <TextView android:layout_height="wrap_content" android:text="Request" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/textView1"></TextView>
-    <EditText android:layout_height="wrap_content" android:id="@+id/editRequest" android:layout_width="fill_parent"></EditText>
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/buttonMakeRequest" android:id="@+id/buttonMakeRequest"></Button>
+	android:orientation="vertical" android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:id="@+id/main">
+	<TextView android:id="@+id/welcome" android:layout_width="fill_parent"
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:text="Welcome to Zandy, the Android client for the Zotero project." android:layout_height="58dp"/>
+	<Button android:layout_weight="1" android:id="@+id/collectionButton" android:layout_height="wrap_content"
+		android:layout_width="wrap_content" android:text="View Collections"></Button>
 </LinearLayout>
