--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,24 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:stretchColumns="1"
-    android:id="@+id/list_item">
-    <TableRow>
-	    <TextView android:text="" android:id="@+id/item_title"
-	    	android:textAppearance="?android:attr/textAppearanceMedium"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:padding="3dip" />
-	</TableRow>
-	<TableRow>
-		<TextView android:text="" android:id="@+id/item_type"
-	        android:padding="3dip" />
-	    <TextView android:text="" android:id="@+id/item_dirty"
-	        android:padding="3dip" />
-    </TableRow>
-    <TableRow>
-	    <TextView android:text="" android:id="@+id/item_summary"
-			android:padding="3dip" />
-    </TableRow>
-</TableLayout>
+    android:layout_height="70dip"
+    android:padding="3dip">
+    
+    <ImageView
+        android:id="@+id/item_type"
+        
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        
+        android:src="@drawable/ic_menu_flag" />
+
+    <TextView  
+        android:id="@+id/item_summary"
+
+        android:layout_width="fill_parent"
+        android:layout_height="20dip" 
+        
+        android:layout_toRightOf="@id/item_type"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        
+        android:singleLine="true"
+        android:ellipsize="marquee" />
+
+    <TextView
+    	android:id="@+id/item_title"
+    	android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        
+        android:layout_toRightOf="@id/item_type"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/item_summary"
+        android:layout_alignWithParentIfMissing="true"
+        android:ellipsize="marquee"
+                
+        android:gravity="center_vertical" />
+
+</RelativeLayout>
