--- a/res/layout/list_collection.xml
+++ b/res/layout/list_collection.xml
@@ -12,9 +12,9 @@
 			android:padding="3dip" />
 	</TableRow>
 	<TableRow>
-	    <TextView android:text="" android:id="@+id/collection_dirty"
+	    <TextView android:text="" android:id="@+id/collection_info"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-	        android:padding="3dip" />
+	        android:padding="1dip" />
     </TableRow>
 </TableLayout>
