--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,4 +10,6 @@
 		android:text="View Collections" android:layout_width="match_parent" android:layout_weight="0.10"></Button>
 	<Button android:id="@+id/itemButton" android:layout_height="wrap_content"
 		android:text="View Items" android:layout_width="match_parent" android:layout_weight="0.21"></Button>
+	<Button android:id="@+id/loginButton" android:layout_height="wrap_content"
+		android:text="Log in" android:layout_width="match_parent" android:layout_weight="0.21"></Button>
 </LinearLayout>
