--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -27,11 +27,36 @@
         <EditTextPreference
                 android:key="user_id"
                 android:title="@string/settings_user_id"
-                android:summary="@string/settings_user_id_desc" />
+                android:summary="@string/settings_user_id_desc"
+                android:numeric="integer" />
 
         <EditTextPreference
                 android:key="user_key"
                 android:title="@string/settings_api_key"
                 android:summary="@string/settings_api_key_desc" />
+</PreferenceCategory>
+<PreferenceCategory android:title="@string/settings_webdav"
+ 			android:summary="">
+        <CheckBoxPreference
+                android:key="webdav_enabled"
+                android:title="@string/settings_webdav_enabled"
+                android:summary="@string/settings_webdav_enabled_desc" />
+
+        <EditTextPreference
+                android:key="webdav_path"
+                android:title="@string/settings_webdav_path"
+                android:summary="@string/settings_webdav_path_desc"
+                android:inputType="textUri" />
+        
+        <EditTextPreference
+                android:key="webdav_username"
+                android:title="@string/settings_webdav_username"
+                android:summary="@string/settings_webdav_username_desc" />
+        
+        <EditTextPreference
+                android:key="webdav_password"
+                android:title="@string/settings_webdav_password"
+                android:summary="@string/settings_webdav_password_desc"
+                android:password="true" />
 </PreferenceCategory>
 </PreferenceScreen>
