--- a/res/layout/list_data.xml
+++ b/res/layout/list_data.xml
@@ -29,11 +29,17 @@
 	        android:padding="1dip" />
     </TableRow>
     <TableRow>
-	    <TextView android:text="" android:id="@+id/data_content"
-	    	android:textAppearance="?android:attr/textAppearanceMedium"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:padding="3dip" />
+
+	    <TextView
+	        android:id="@+id/data_content"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:maxLines="5"
+	        android:padding="3dip"
+	        android:scrollbars="vertical"
+	        android:text=""
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <WebView
         android:id="@+id/data_content_web"
         android:layout_width="wrap_content"
