Add string for webdav ssl override; bump version for 1.3.5 release

--- a/app/res/xml/settings.xml
+++ b/app/res/xml/settings.xml
@@ -62,5 +62,9 @@
                 android:title="@string/settings_webdav_password"
                 android:summary="@string/settings_webdav_password_desc"
                 android:password="true" />
+      <!--   <CheckBoxPreference
+                android:key="webdav_ssl_override"
+                android:title="@string/settings_webdav_ssl_override"
+                android:summary="@string/settings_webdav_ssl_override_desc" />-->
 </PreferenceCategory>
 </PreferenceScreen>
