Disable SSL checking when box checked

--- a/src/main/res/layout/preferences.xml
+++ b/src/main/res/layout/preferences.xml
@@ -23,6 +23,12 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="10" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/testConnections"
+        android:text="@string/settings_test_connections"/>
     <Button android:text="@string/sync_pending_requests"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
